# emotion-aware-assistant-team15

./: .gitignore  README.md  day10_train_affectnet.py  day11_academic_emotion_detection.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.pdf-workspace.config.mjs
docs/: demo_script.md
emotion_aware_academic_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
emotion_aware_assistant/: __init__.py  app.py  cli.py
logs/: session_20260513_223725.jsonl  session_20260513_223740.jsonl  session_20260513_223747.jsonl  session_20260513_223759.jsonl  session_20260513_223827.jsonl  session_20260513_225856.jsonl  session_20260513_231316.jsonl  session_20260513_231521.jsonl  session_20260513_231617.jsonl  session_20260513_231701.jsonl  session_20260513_231722.jsonl  session_20260513_231740.jsonl  session_20260513_235440.jsonl  session_20260513_235622.jsonl  session_20260513_235623.jsonl  session_20260513_235703.jsonl  session_20260513_235712.jsonl  session_20260513_235753.jsonl  session_20260513_235758.jsonl  session_20260514_161344.jsonl  session_20260514_163552.jsonl  session_20260514_163904.jsonl  session_20260514_163909.jsonl  session_20260514_163955.jsonl  session_20260514_164000.jsonl  session_20260514_164009.jsonl  session_20260514_164012.jsonl  session_20260514_164015.jsonl  session_20260514_165106.jsonl  session_20260514_165128.jsonl  session_20260514_182339.jsonl  session_20260514_182349.jsonl  session_20260514_182721.jsonl  session_20260514_182850.jsonl  session_20260514_182921.jsonl  session_20260514_183041.jsonl  (+190 more)
(+1736 files in other folders)
