[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-aware-academic-assistant"
version = "0.1.0"
description = "Emotion-aware academic paper reading assistant for CS731/COMPSYS731."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
pdf = ["pymupdf>=1.24"]
vision = ["opencv-python>=4.8", "torch", "torchvision", "timm"]
yolo = ["ultralytics", "onnxruntime"]
retrieval = ["scikit-learn>=1.3"]
speech = ["faster-whisper"]
all = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "PyQt5>=5.15",
  "pymupdf>=1.24",
  "opencv-python>=4.8",
  "torch",
  "torchvision",
  "timm",
  "scikit-learn>=1.3",
  "faster-whisper",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["emotion_aware_assistant*"]
